--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,19 @@
 <resources>
     <string name="app_name">Map basic</string>
     <string name="title_activity_maps">Map</string>
-    <string name="key_google_api">AIzaSyBFxXP2wHUUyCeoKfm6aPP_sJpqZSHAAJQ</string>
+    <string name="title_activity_locations">Locations</string>
+    <string name="title_activity_directions">Directions</string>
+
+    <string name="key_google_api" translatable="false">AIzaSyBFxXP2wHUUyCeoKfm6aPP_sJpqZSHAAJQ</string>
     <string name="title_home">Home</string>
     <string name="title_navi_map">Map</string>
+    <string name="title_navi_store">Store</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="fragment_maps_btn_marker">Marker</string>
     <string name="fragment_maps_btn_driving">Driving</string>
     <string name="fragment_maps_btn_reserve">Reserve</string>
     <string name="fragment_maps_sw_sync">Sync</string>
+    <string name="title_stores">Store</string>
+
 </resources>
