--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -25,4 +25,5 @@
     <string name="message_success">Thành công</string>
     <string name="message_failed">Thất bại</string>
     <string name="message_waiting">Đang xử lý…</string>
+    <string name="locations_context_menu_item_edit">Thay đổi</string>
 </resources>
