--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="message_success">Success</string>
     <string name="message_failed">Failure</string>
     <string name="message_waiting">Please wait a moment…</string>
+    <string name="locations_context_menu_item_edit">Edit</string>
 
 </resources>
