--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,8 @@
     <string name="locations_context_menu_item_remove">Remove</string>
     <string name="confirm_title_remove">Remove</string>
     <string name="confirm_content_remove">Are you sure?</string>
+    <string name="confirm_title_logout">Logout</string>
+    <string name="confirm_content_logout">Are you sure?</string>
     <string name="confirm_btn_ok">Yes</string>
     <string name="confirm_btn_no">No</string>
 
